WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
88215
[GTK] Memory leaks in AccessibilityUIElementGtk.cpp
https://bugs.webkit.org/show_bug.cgi?id=88215
Summary
[GTK] Memory leaks in AccessibilityUIElementGtk.cpp
Sudarsana Nagineni (babu)
Reported
2012-06-04 00:24:21 PDT
The following two memory leaks found in AccessibilityUIElementGtk.cpp ==6395== 18 bytes in 1 blocks are definitely lost in loss record 1,979 of 10,539 ==6395== at 0x4C2B6CD: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==6395== by 0xC38BA38: g_malloc (gmem.c:159) ==6395== by 0xC3A05B4: g_strconcat (gstrfuncs.c:581) ==6395== by 0x45A0F3: attributeSetToString(_GSList*) (AccessibilityUIElementGtk.cpp:144) ==6395== by 0x45A245: AccessibilityUIElement::allAttributes() (AccessibilityUIElementGtk.cpp:158) ==6395== by 0x44722A: allAttributesCallback(OpaqueJSContext const*, OpaqueJSValue*, OpaqueJSValue*, unsigned long, OpaqueJSValue const* const*, OpaqueJSValue const**) (AccessibilityUIElement.cpp:41) ==6395== by 0x5244E27: JSC::JSCallbackFunction::call(JSC::ExecState*) (JSCallbackFunction.cpp:73) ==6395== by 0x54007D9: cti_op_call_NotJSFunction (JITStubs.cpp:2308) ==6395== by 0x53FBE00: JSC::JITThunks::tryCacheGetByID(JSC::ExecState*, JSC::CodeBlock*, JSC::ReturnAddressPtr, JSC::JSValue, JSC::Identifier const&, JSC::PropertySlot const&, JSC::StructureStubInfo*) ( ==6395== by 0x7FEFFDE0F: ??? ==6395== by 0x414E83F: ??? ==6395== by 0x27B0FD2F: ??? ==6395== by 0x416FA7F: ??? ==6395== ==6395== 32 bytes in 1 blocks are definitely lost in loss record 3,319 of 10,539 ==6395== at 0x4C2B7B2: realloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==6395== by 0xC38BAF6: g_realloc (gmem.c:224) ==6395== by 0xC3A25C6: g_string_maybe_expand (gstring.c:102) ==6395== by 0xC3A28D6: g_string_insert_len (gstring.c:444) ==6395== by 0x45A105: attributeSetToString(_GSList*) (AccessibilityUIElementGtk.cpp:144) ==6395== by 0x45A245: AccessibilityUIElement::allAttributes() (AccessibilityUIElementGtk.cpp:158) ==6395== by 0x44722A: allAttributesCallback(OpaqueJSContext const*, OpaqueJSValue*, OpaqueJSValue*, unsigned long, OpaqueJSValue const* const*, OpaqueJSValue const**) (AccessibilityUIElement.cpp:41) ==6395== by 0x5244E27: JSC::JSCallbackFunction::call(JSC::ExecState*) (JSCallbackFunction.cpp:73) ==6395== by 0x54007D9: cti_op_call_NotJSFunction (JITStubs.cpp:2308) ==6395== by 0x53FBE00: JSC::JITThunks::tryCacheGetByID(JSC::ExecState*, JSC::CodeBlock*, JSC::ReturnAddressPtr, JSC::JSValue, JSC::Identifier const&, JSC::PropertySlot const&, JSC::StructureStubInfo*) ( ==6395== by 0x7FEFFDE0F: ??? ==6395== by 0x414F1BF: ??? ==6395== by 0x27B0FD2F: ??? ==6395== by 0x416FA7F: ???
Attachments
Patch
(2.11 KB, patch)
2012-06-04 06:06 PDT
,
Sudarsana Nagineni (babu)
no flags
Details
Formatted Diff
Diff
Patch
(2.12 KB, patch)
2012-06-04 10:51 PDT
,
Sudarsana Nagineni (babu)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Sudarsana Nagineni (babu)
Comment 1
2012-06-04 06:06:59 PDT
Created
attachment 145571
[details]
Patch Fixed memory leaks in AccessibilityUIElementGtk.cpp
Sudarsana Nagineni (babu)
Comment 2
2012-06-04 10:51:43 PDT
Created
attachment 145606
[details]
Patch Fixed two leaks in AccessibilityUIElementGtk.cpp
WebKit Review Bot
Comment 3
2012-06-04 13:10:51 PDT
Comment on
attachment 145606
[details]
Patch Clearing flags on attachment: 145606 Committed
r119422
: <
http://trac.webkit.org/changeset/119422
>
WebKit Review Bot
Comment 4
2012-06-04 13:10:56 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug