[GTK] Memory leaks in AccessibilityUIElementGtk.cpp https://bugs.webkit.org/show_bug.cgi?id=88215

Patch by Sudarsana Nagineni <sudarsana.nagineni@linux.intel.com> on 2012-06-04
Reviewed by Martin Robinson.

Fixed memory leaks in AccessibilityUIElement by using GOwnPtr
for newly allocated strings.

* DumpRenderTree/gtk/AccessibilityUIElementGtk.cpp:
(attributeSetToString):
(AccessibilityUIElement::allAttributes):

Canonical link: https://commits.webkit.org/106089@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119422 268f45cc-cd09-0410-ab3c-d52691b4dbfc